fixed letter-spacing css

--- a/charlie/css/main.css
+++ b/charlie/css/main.css
@@ -45,7 +45,7 @@ select {
   font-size: 10px !important;
   padding: 2px;
   border-radius: 3px;
-  letter-spacing: 1px;
+  letter-spacing: 0.1mm;
 }
 
 input {
@@ -372,3 +372,8 @@ footer {
 .floatLeft{float:left;}
 .floatRight{float:right;}
 .alignCenter{text-align:center;}
+
+.ui-dialog {
+  font-family:Verdana, sans-serif;
+  letter-spacing:0.1mm;
+}
